--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
                     <input
                         type="text"
                         placeholder="책을 검색하세요 (ex: 제목, 작가)"
+                        autofocus
                     />
                 </div>
                 <div class="result-wrapper"></div>
