--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,12 @@
     </head>
     <body>
         <div id="App">
-            <header>
-                <span class="logo">searchBook2021</span>
-                <button class="darkmode">🌕</button>
-            </header>
+            <div class="header-wrapper">
+                <header>
+                    <span class="logo">searchBook2021</span>
+                    <button class="darkmode">🌞</button>
+                </header>
+            </div>
             <main>
                 <div class="input-wrapper">
                     <input
